<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>app.bastiannolte.examples.jee</groupId>
    <artifactId>todolist</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>war</packaging>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>${maven.compiler.source}</maven.compiler.target>
        <junit.jupiter.version>5.5.2</junit.jupiter.version>
        <failOnMissingWebXml>false</failOnMissingWebXml>
    </properties>

    <dependencies>
        <!-- The «new» Java EE -->
        <dependency>
            <groupId>jakarta.platform</groupId>
            <artifactId>jakarta.jakartaee-api</artifactId>
            <version>8.0.0</version>
            <scope>provided</scope>
        </dependency>
        <!-- Aviod getter setter jungle -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.10</version>
            <scope>provided</scope>
        </dependency>
        <!-- JPA -->
        <dependency>
            <groupId>org.hibernate</groupId>
            <artifactId>hibernate-entitymanager</artifactId>
            <version>5.4.4.Final</version>
        </dependency>
        <!-- Unit testing -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>${junit.jupiter.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <!-- Docker build -->
            <plugin>
                <groupId>io.fabric8</groupId>
                <artifactId>docker-maven-plugin</artifactId>
                <version>0.31.0</version>
                <extensions>true</extensions>
                <configuration>
                    <showLogs>true</showLogs>
                    <verbose>all</verbose>
                    <images>
                        <image>
                            <alias>todolist</alias>
                            <name>bastiannolte/dev/todolist:${project.version}</name>

                            <build>
                                <from>jboss/wildfly:latest</from>
                                <assembly>
                                    <basedir>/opt/jboss/wildfly/standalone/deployments</basedir>
                                    <descriptorRef>rootWar</descriptorRef>
                                </assembly>
                            </build>
                            <run>
                                <ports>
                                    <port>8080:8080</port>
                                </ports>
                                <wait>
                                    <http>
                                        <url>http://localhost:8080/rest/todo</url>
                                    </http>
                                    <time>20000</time>
                                </wait>
                                <links>
                                    <link>database:db</link>
                                </links>
                            </run>
                        </image>
                        <image>
                            <alias>database</alias>
                            <name>mysql:8.0.2</name>
                            <run>
                                <ports>
                                    <port>3306:3306</port>
                                </ports>
                                <env>
                                    <MYSQL_DATABASE>app.bastiannolte.examples.jee</MYSQL_DATABASE>
                                    <MYSQL_USER>todolist</MYSQL_USER>
                                    <MYSQL_PASSWORD>devpwd</MYSQL_PASSWORD>
                                    <MYSQL_ROOT_PASSWORD>rtpwd123</MYSQL_ROOT_PASSWORD>
                                </env>
<!--                                <volumes>-->
<!--                                    <bind>-->
<!--                                        <volume>${project.basedir}/scripts:/docker-entrypoint-initdb.d</volume>-->
<!--                                    </bind>-->
<!--                                </volumes>-->
                                <wait>
                                    <log>.*ready for connections.*</log>
                                    <time>30000</time>
                                </wait>
                            </run>
                        </image>
                    </images>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
